--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -4,7 +4,7 @@
 \@ifundefined{section}{\standalonetrue}{\standalonefalse}
 \makeatother
 \ifstandalone
-\documentclass{report}
+\documentclass[11pt]{report}
 
 \input{all_usepackages} 
 \usepackage[margin=1.25in]{geometry}
@@ -223,45 +223,27 @@ In similar fashion, Stevens et al. \cite{Stevens2009a} introduced a local versio
 Fasshauer's method called \emph{local Hermitian interpolation}. The authors have applied their method to 3D soil 
 problems based on transient Richards' equations \cite{Stevens2008a, Stevens2009a, Stevens2009b}.
 
-\subsection{RBF-FD}
 
-RBF-generated Finite Differences (RBF-FD) were first introduced by Tolstykh in 2000 \cite{Tolstykh2000}, 
-but it was the simultaneous, yet independent,
-efforts in \cite{Shu2003}, \cite{Tolstykh2003a}, \cite{Wright2003} and \cite{Cecil2004} that gave the method its real start. 
-The RBF-FD method (and the RBF-HFD, ``Hermite" equivalent \cite{WrightFornberg06}) is similar in concept to classical 
-finite-differences (FD), but differs in that the underlying differentiation 
-weights are exact for RBFs rather than polynomials. The method contrasts with global RBF methods in the sense that it does not interpolate the differential operator of the PDE. Instead, the RBF-FD method applies the differential operator to translates of the RBF in a small stencil/neighborhood of nodes. Solving the interpolation system in RBF-FD results in the set of generalized FD weights that approximate the differential quantity at the stencil center.
+\subsection{Recent Advances in Conditioning}
 
-RBF-FD 
-share many advantages with global RBF methods, 
-like the ability to function without an underlying mesh, easily extend to higher dimensions and afford large time steps; however spectral accuracy is lost. 
-Other advantages of RBF-FD 
-include lower computational complexity together with high-order accuracy
-(6th to 10th order accuracy is common). 
-As in FD, increasing the stencil size, $n$, increases the accuracy of the approximation.
-% TODO: rbffd has the opportunity for parallelization.
+Recently, Fornberg and Wright 
+\cite{Fornberg2004} presented the \emph{Contour--Pad\'{e} algorithm}, which allows for numerically stable 
+computation of highly 
+accurate interpolants for (very small) cases typically associated with ill-conditioning induced by nearly flat RBFs (i.e., $\epsilon \rightarrow 0$). Larsson and Fornberg \cite{Larsson2003} 
+applied the 
+algorithm to all three methods of collocation (Kansa's, Fasshauer's and Direct Collocation) with considerable gain in accuracy over solutions from classical second-order FD and a pseudospectral method. Note that currently, the Contour-Pad\'{e} 
+algorithm was only studied for global RBF interpolation, not for compact or local methods. 
 
-In some ways, RBF-FD and global RBF methods are plagued by the same difficulties. For example, as the number of nodes in the stencil increases, so too does the ill-conditioning of the linear systems to be solved. Similarly, the most accurate weights occur when $\epsilon \rightarrow 0$, but values in that regime beget additional ill-conditioning problems---a recurrence of the \emph{Uncertainty Relation} \cite{Schaback1995}. One key difference in the multiple independent RBF-FD origins was that Wright \cite{Wright2003} was able to bypass ill-conditioning of RBF-FD and investigate its behavior in the limit as $\epsilon \rightarrow 0$ by means of the Contour-Pad\'{e} algorithm. 
+The \emph{RBF-QR} method, an alternative for numerically stable computation in the limit as $\epsilon \rightarrow 0$, was introduced by Fornberg  and 
+Piret \cite{Fornberg2007} in context of a sphere, and later extended to planar 2D problems in \cite{Fornberg2009b}. The 
+RBF-QR 
+method is simple 
+to implement (less than 100 lines of Matlab code), and it allows solution of large problems that are typically ill-conditioned. Fornberg, Larsson and Flyer \cite{Fornberg2009b} successfully applied RBF-QR on large problems with 6000 nodes for globally supported basis functions. 
+%TODO: add mention of bengt's latest on RBF-QR \cite{Fornberg2011a, Fornberg2011b}
 
-Given $N$ total nodes in the domain, $N$ linear systems, each of size $n \times n$, are solved to calculate the differentiation weights. Since $n \ll N$, the RBF-FD preprocessing complexity is dominated by $O(N)$; significantly lower than the global RBF method ($O(N^3)$). The cost per time step is also $O(N)$. Although the complexity of RBF-PS has closed the gap between the two methods, RBF-FD squeaks by 
+With these two algorithms, global RBF methods have overcome most ill-conditioning issues for small to mid-sized problems. Unfortunately, both Contour-Pad\'{e} and RBF-QR fail for large enough problems due to ill-conditioning. As the number of RBFs increases beyond a few thousand nodes it is impossible to avoid  ill-conditioning of the extremely large interpolation matrix.
 
-RBF-FD have been successfully employed for a variety of problems including Hamilton-Jacobi equations \cite{Cecil2004}, convection-diffusion problems \cite{Chandhini2007, Stevens2009b},
-incompressible Navier-Stokes equations \cite{Shu2003,Chinchapatnam2009}, transport on the sphere \cite{FornbergLehto11}, and the shallow water equations \cite{FlyerLehto11}.
-%Another local alternative for solving PDEs with RBFs was presented by Wright and Fornberg \cite{Wright2004, WrightFornberg06}. 
-%However, in the limit as RBF-FD stencils include all nodes in the domain, Kansa's method is reproduced \cite{Shu2006}. 
-%\togordon{Statement about RBF-FD and Kansa's method is given without proof.}
-%According to Wright and Fornberg \cite{Wright2004}, RBF-FD (and \emph{RBF-HFD} for the Hermite version) was i%ndependently 
-%proposed by many authors including Wright \cite{Wright2003} in his dissertation, Tolstykh \cite{Tolstykh2000,Tolstykh2003a, Tolstykh2003b}, Shu et al. \cite{Shu2003}, and Cecil et al. \cite{Cecil2004}. 
-Shu et al. \cite{Shu2006} compared the RBF-FD method to Least Squares FD (LSFD) in context of 2D incompressible viscous 
-cavity flow, and found that under similar conditions, the RBF-FD method was more accurate than LSFD, but the solution required 
-more iterations of an iterative solver. RBF-FD was applied to Poisson's 
-equation in \cite{Wright2004}.  Chandhini and Sanyasiraju \cite{Chandhini2007} studied it in context of 1D and 2D, 
-linear and non-linear, 
-convection-diffusion equations, demonstrating solutions that are non-oscillatory for high Reynolds number, with improved 
-accuracy over classical FD. An application to Hamilton-Jacobi problems \cite{Cecil2004}, and 2D linear and non-linear PDEs 
-including Navier-Stokes equations \cite{Shu2003} have all been considered. 
-
-
+This reveals the benefit of local methods, which decrease the number of RBFs and ill-conditioning. However, in the limit as local stencil size increases to include all nodes in a domain, the local and global method are equivalent; thus it is known that local methods also suffer extreme ill-conditioning around 2000 nodes per stencil \cite{Shu2006}. To our our knowledge, no research has yet been published that applies the RBF-QR method to RBF-FD stencils.
 
 %
 %In 2002, Mouat and Beatson \cite{Mouat2002} suggested that Matern functions would be more accurate than the more 
@@ -531,46 +513,46 @@ careful inspection of the index $i$ in Equations~\ref{eqn:kansa_interior} and \r
 
 %TODO: RBF-PS
 \subsubsection{RBF-PS}
+%TODO: shown to solve great things
+%TODO: in most cases nodes are constant
+%TODO: if 
 
-The RBF-PS method was introduced by Fasshauer \cite{Fasshauer2006, Fasshauer2007}. 
-
-The RBF-PS applies the same logic as Kansa's and Fasshauer's collocation methods to form matrix $A_{\diffop{}}$. However, RBF-PS makes a subtle change to assume the solution, $u(x)$, is only required at collocation points \cite{Fasshauer2006, Fasshauer2007}. Then, extending Equation~\ref{eqn:solve_u} for the discrete differentiation matrix, $D_\diffop{}$, gives:
+The extension of global collocation to traditional pseudo-spectral form was introduced by Fasshauer in \cite{Fasshauer2006}. Dubbed RBF-PS, the method utilizes the same logic from Kansa's and Fasshauer's collocation methods to form matrix $A_{\diffop{}}$ (i.e., $A_\diffop{}$ can be either Equation~\ref{eqn:kansa_method} or \ref{eqn:fasshauer_method}). However, RBF-PS subtly assumes the solution, $u(x)$, is only required at collocation points \cite{Fasshauer2006, Fasshauer2007}. Then, extending Equation~\ref{eqn:solve_u}, RBF-PS gives:
 \begin{eqnarray}
 u(x) & = & \left( B A^{-1}_\diffop{} \right) \left( \begin{array}{cc}  f \\ 0  \end{array} \right) \nonumber \\
 & = & D^T_{\diffop{}} \left( \begin{array}{cc}  f \\ 0  \end{array} \right) \label{eq:rbf-ps}.
 \end{eqnarray}
-Here, $D_\diffop{}$ is independent of the function $f(x)$ and is assembled by solving the multiple RHS linear system: 
+where $D_\diffop{}$ is a discrete differentiation matrix (DM) for the operator $\diffop{}$.
+Here, $D_\diffop{}$ is independent of the function $f(x)$ and is assembled by solving the system: 
 \begin{eqnarray}
 D_{\diffop{}} & = & A^{-T}_{\diffop{}} B^T
 \end{eqnarray}
-For assembly, an LU-decomposition can be used ($O(N^3)$) in preprocessing \cite{WrightFlyerYuen10,Fasshauer2007}. Forward- and back-solves for the decomposition are applied immediately ($O(N^2)$) to complete assembly. 
+An LU-decomposition ($O(N^3)$) in preprocessing is fitting to efficiently solve the multiple RHS system \cite{WrightFlyerYuen10,Fasshauer2007}. Forward- and back-solves ($O(N^2)$), to complete assembly of $D_\diffop{}$, also occur in preprocessing. 
 
-Since matrix $D_{\diffop{}}$ is independent of $u(x)$ and $f(x)$, it is only updated if RBF centers move---a compelling benefit for time-dependent problems with stationary nodes---otherwise the solution is given by an $O(N^2)$ matrix multiply. In contrast, global RBF collocation methods construct the LU factors of $A_{\diffop{}}$ in preprocessing, but must apply forward- and back-solves at each time-step ($O(N^2)$) to obtain weighting coefficients before the pre-multiply of $B$ (additional $O(N^2)$ step) provides the solution.
+Since matrix $D_{\diffop{}}$ is independent of functions $u(x)$ and $f(x)$, the matrix is only updated if the RBF centers move---a compelling benefit for time-dependent problems on stationary nodes; otherwise, the time-dependent solution is given by a matrix-vector multiply ($O(N^2)$). In contrast to RBF-PS, classic global RBF collocation methods also construct LU factors---in this case, for $A_{\diffop{}}^{-1}$---in preprocessing, but delay application of forward- and back-solves to occur at each time-step when resolving time-dependent weighting coefficients. An additional pre-multiply by $B$ ($O(N^2)$) is then required to complete the time-step under classic RBF collocation.
  
-%TODO: RBF-PS \cite{Fasshauer2006, Fasshauer2007}\cite{FasshauerZhang2007}\cite{WrightFlyerYuen10}
-
-%When the test points coincide with the trial points we have the RBF-PS method. 
+%TODO: RBF-PS literature \cite{Fasshauer2006, Fasshauer2007}\cite{FasshauerZhang2007}\cite{WrightFlyerYuen10}
 
 
-\subsection{Local Methods}
-In the methods above, globally supported RBFs were required. However, the latest trend is to use RBFs defined with some cut-off radius to enforce compact support. In some cases, authors have used the compact support to produce a single (large) sparse system for interpolation (see e.g., \cite{Wang2002, Liu2005, Correa2007, Yang2008, Lin2009}). Other approaches use compact support to produce local linear systems defined at each collocation point. Examples of this include \cite{Sarler2006, Vertnik2006} for Kansa's method, \cite{Stevens2008a, Stevens2009a, Stevens2009b} for Fasshauer's method. To our knowledge no one has considered local Direct collocation.  Also, instead of specifying a cut-off radius, some authors specify the exact stencil size (i.e., number of neighboring points to include); see e.g., \cite{Divo2007, Stevens2009b}. 
+\subsubsection{Local Methods}
+In the methods above, globally supported RBFs were required. However, another trend is to use RBFs defined with some cut-off radius to enforce compact support. In some cases, authors have used the compact support to produce a single (large) sparse system for interpolation (see e.g., \cite{Wang2002, Liu2005, Correa2007, Yang2008, Lin2009}). Other approaches use compact support to produce local linear systems defined at each collocation point. Examples of this include \cite{Sarler2006, Vertnik2006} for Kansa's method, \cite{Stevens2008a, Stevens2009a, Stevens2009b} for Fasshauer's method. To our knowledge no one has considered local Direct collocation.  Also, instead of specifying a cut-off radius, some authors specify the exact stencil size (i.e., number of neighboring points to include); see e.g., \cite{Divo2007, Stevens2009b}. 
 
 After observing the general structure of the symmetric and unsymmetric collocation methods above, it is necessary only to present the symmetric (i.e. Fasshauer's) local method and note that in the unsymmetric case certain blocks will be zero allowing the system to shrink. 
 
 The formula for the interpolant local to the $(k)$-th collocation point (i.e., RBF center) is given by: 
-\begin{eqnarray}
+\begin{eqnarray*}
 u^{(k)}_\phi(x_i) & = & \sum_{j(k)=1}^{N_{I}}  c_j^{(k)} \diffop{\phi_j(x_i)} + \sum_{j(k)=N_{I} + 1}^{N_{S}} c^{(k)}_j\boundop{\phi_j(x_i)} + \sum_{l=1}^{M}d^{(k)}_l P_l(x_i)
-\label{eqn:fasshauer_local_approx}
-\end{eqnarray}
+%\label{eqn:fasshauer_local_approx}
+\end{eqnarray*}
 where $N_{S}$ represents the number of points that defines the local stencil; $N$ is possibly a function of the cut-off radius in the RBF, $N_{I}$ is the number of interior stencil points (those points of the stencil that lie in the interior of $\Omega$). The index $j$ is a function of the stencil center $k$ allowing the system to include a local neighborhood of stencil points.
 
 Collocating produces a linear system with similar structure to the global collocation problem, but the dimensions are much smaller:
 \begin{eqnarray}
-\left[ \begin{array}{c c c} 
+\underbrace{\left[ \begin{array}{c c c} 
 	\phi_{\diffop{}\diffop{}} & \phi_{\diffop{}\boundop{}} & P_\diffop{} \\
 	\phi_{\boundop{}\diffop{}} & \phi_{\boundop{}\boundop{}} & P_\boundop{} \\
 	P^T_{\diffop{}} & P^T_{\boundop{}} & 0 \\
-	\end{array} \right] \left( \begin{array}{c}
+	\end{array} \right]}_{A_{\diffop{}}} \left( \begin{array}{c}
 							{c}^{(k)} \\
 							{d}^{(k)}
 							 \end{array}
@@ -587,217 +569,27 @@ Solving this system gives an interpolant locally defined around the stencil cent
 Note that because the interpolants are local, there is no notion of global continuity/smoothness of the solution.
 
 
-\subsection{RBF-FD}
-
-% TODO: how does the RBF-FD method expand on existing?
-While most of the literature surrounding RBFs for PDEs involves collocation, an alternative method does exist: RBF-FD. RBF-FD is a hybrid of RBF scattered data interpolation and Finite Difference stencils.The idea behind finite-difference stencils is to express various derivative operators as a linear combination of the unknown functional values in the neighborhood of the point where an approximation to the derivative operator is desired. Common approximations such as upwind differencing, center differencing, higher order approximations, and even spectral operators, are of this form. A common approach to building such discrete operators is to form a local interpolant in a neighborhood of the target point, and simply differentiate it analytically. This is the approach taken in RBF-FD,   which  allows for stencils with irregular placement and number of nodes, and assigns their weights based on an RBF \cite{Wright2003}. 
-A detailed derivation is provided in the next chapter. %For a detailed derivation of the method see \cite{Wright2004, Wright2003, WrightFornberg06, Chandhini2007}. 
-Such an approach leads to very simple implementations of time-advancement schemes, whether explicit or implicit. The solution at the new time step is simply some linear---if $\diffop{}$ is linear, nonlinear otherwise---combination of the unknown functional values (if implicit scheme) or known functional value (if explicit scheme). 
-
-Key challenges lie in the choice of grid, the choice of stencil, whether or not to change the support as a function of the stencil, how to guaranty the stability of the differentiation  operator after discretizaiton, etc. 
-
-
-\subsection{Time Stepping}
-
-Until now we have assumed that the differential operator $\diffop{}$ had no time dependency. However, many important problems are a function of time: 
-\begin{eqnarray}
-\pd{u(x;t)}{t} &=& \diffop{u(x;t)} \\
-\boundop(u(x;t)) &=& g(x) 
-\label{eqn:timedep}
-\end{eqnarray}
-with some initial condition $u(x;0) = f(x)$. Both collocation methods and RBF-FD methods can be used to discretize the right hand side. In the case of collocation, the coefficients $c$ are now functions of time. On the other hand, it is the unknown functional values that are considered to be the unknown, time-dependent variables when RBF-FD is used. 	
-
-The general approach for collocation methods is to first use the initial and boundary conditions to get an initial set of 
-coefficients $c(t), d(t)$, whereas before, $(c,d)$ denotes the list of unknown coefficients of the RBF basis functions and the monomials. 
-%If the RBF centers and collocation points are stationary (either because the PDE is a boundary value problem or a non-moving node initial value problem) 
-Prior to spatial discretization, Equation~\ref{eqn:timedep} is updated using any of the standard methods for time-stepping, such as Euler, Crank-Nicholson, or higher order Runge-Kutta methods to name a few. Here we demonstrate the approach with the Euler method (which is explicit) for simplicity. In practice, a higher order method would be chosen, perhaps an implicit method. 
-The Euler method can be written as
-\begin{eqnarray}
-u(x; t_{n+1}) &=& u(x; t_{n}) + \Delta t (\diffop{u(x;t_n)}) %\\
- %&=& u(x; t_{n}) + \Delta t ( A_\diffop{} A^{-1} u(x;t_n))
- \label{eqn:euler_time}
-\end{eqnarray}
-%\toevan{Please make sure notation of previous line is correct. Use same notation $A_\diffop{} A^{-1}$.}
-Since $u(x;0)=u(x;t_0)$ is known as a function of $(c,d)=A^{-1} u(x;t_n)$, it is straightforward to compute the coefficients, and from there, $\diffop(u(x;t_n))$. 
-
-Equation~\ref{eqn:euler_time} is solved via a two step algorithm: 
-\begin{enumerate}
-	\item solve Equation~\ref{eqn:solve_rbf} to approximate $\diffop{u(x;t_n)}$ for the current time-step
-	\item update $u(x;t_{n+1})$
-\end{enumerate}
-Initially, $A_\diffop{} A^{-1}$ is computed once during the first time-step, and the first part of the algorithm is reduced to an inner product to get $\diffop{u(x;t_n)}$. Once $u(x;t_{n+1})$ is updated, one repeats the procedure with $u(x;t_{n+1})$ as a new initial condition. For collocation methods, one must recompute all the coefficients at each timestep (i.e. recompute $A^{-1}$), which is expensive. On the other hand, for a static grid,  $A_\diffop{} A^{-1}$ can be precomputed and there is no longer any need to work in coefficient space. In this case, we have a type of RBF-FD method, which is solely expressed in terms of functional values. Of course, in a "pure" RBF-FD method, one has expressions for the various derivatives and operators as a linear combination of functional values (the derived stencil being an implicit function of the RBFs and their location). 
-
-There is a huge literature on time-stepping schemes for finite-difference, finite-volume, spectral methods, etc., and many of these methods can be adopted to the solve time-dependent problems on meshless grids. Although there are surely issues that are particular to RBFS, we do not discuss them here. Instead, we will include our experiences in the final thesis. 
-
-
-For initial value problems with moving nodes, the coefficients must be updated at each time-step whether working with collocation or RBF-FD. We do not consider moving node problems in this thesis. 
-%
-%\section{Coupled Equations}
-%In the case of coupled equations (e.g. the shallow water equations)
-
-%\hl{NEED AN EXAMPLE (perhaps solving the heat equation) better yet, lets demonstrate the heat equation in the proposal section when we talki about he existing code and how we plan to extend it.}
-
-%To illustrate, we consider the simple forward Euler case time is discretized as:
-%\begin{eqnarray}
-%\pd{u(x;t)}{t} = \frac{u_{n+1}(x) - u_{n}(x)}{\Delta t} &=& \diffop{u_{n}(x)} \\
-%u_{n+1} &=& u_{n} + \Delta t (\diffop{u_{n}(x)})
-%\end{eqnarray}
-%Initially, coefficients $c_j$ are found by solving: 
-%\begin{eqnarray}
-%\diffop{u_1}(x) = f(x) \\
-
-%\end{eqnarray}
-%At each time step we know $u_n$ and $\diffop{u_{n}}(x)$ using Equations~\ref{eqn:solve_u} and \ref{eqn:solve_uxx}. Then the time stepping algorithm is two part: 
-%\begin{enumerate}
-%	\item find interpolant $u_{\phi}(x)$  $\diffop{u_n(x)} using collocation or RBF-FD
-%	\item a
-%\end{enumerate}
-%
-%\section{RBF-FD Example: Solving a Time-Dependent PDE}
-%\toevan{NEED TO FINISH THIS}
-%In this section, we provide a small example of how to solve a time-dependent elliptic PDE (the heat equation) using RBF-FD. 
-
-%We start with the equation:
-%\begin{eqnarray}
-%\pd{u(x,y;t)}{t} &=&  k \nabla^{2} u(x,y;t) \on{\Interior} \\
-%u(x,y;t) &=& 0 \hskip5em\on{\Boundary}
-%\end{eqnarray}
-
-%To simplify notation we let $\vec{u}_n = u(x,y; t_n) = [u_{n,x}\ \ u_{n,y}]^T$ where the subscript $u_{n,x}$ specifies the $x$ component of $u_n$.
-
-%We start by solving for $\nabla^2 \vec{u}_n$ using RBF-FD: 
-
-%\begin{eqnarray}
-%u^{(k)}_\phi(x) = \sum_{j(k)=1}^{N_S} c^{(k)}_j \phi_j(x) + \sum_{l(k)=1}^{M} d^{(k)}_l P_l(x) &\approx& u(x)
-%\end{eqnarray}
-
-
-%Using 4th-Order Runge-Kutta (\cite{Burden2005}) for time discretization: 
-%\begin{eqnarray}
-%\vec{k_1} &=& \Delta t (\nabla^{2} \vec{u_n}) \\
-%\vec{k_2} &=& \Delta t (\nabla^{2} u_{n+}(x+k_{1,x}/2,y+k_{1,y}/2; t)) 
-%\end{eqnarray}
-
-
-
-%
-%We discretize to get: 
-%\begin{eqnarray}
-%\vec{u'} & = & \phi \vec{b} \\
-%&=& 
-%\end{eqnarray}
-
-%An alternate form in which we can express our problem is by expanding $\nabla^2$: 
-%\begin{equation}
-%\frac{du(x)}{dt} = \nabla \cdot \nabla u(x)
-%\end{equation}
-%which allows us to reformulate the approximate solution as a two part algorithm: 
-%\begin{eqnarray}
-%v(x) &=& \nabla u(x) \\
-%\frac{d u(x)}{dt} &=& \nabla \cdot v(x)
-%\end{eqnarray}
-
-%%\hl{start fresh here: }
-
-%%These notes are based on \cite{Fasshauer:2007}.
-
-%%To apply radial basis functions to the solution of PDEs, we assume we assume we are given a domain $\Omega \subset \R^s$, 
-%%and a linear elliptic PDE of the form: 
-%%\begin{eqnarray}
-%%L u(x) &=& f(x), \ \ \ \ \ \ \ x \textrm{ in } \Omega\\
-%%u(x) &=& g(x), \ \ \ \ \ \ \ x \textrm{ on } \partial \Omega
-%%\end{eqnarray}
-%%where $L$ is some operator (i.e. $\nabla^2$). 
-
-%%\hl{collocation} We then use Kansa's collocation method to express the solution 
-
-%%\hl{Show how the laplacian is expressed in terms of $\phi_0 '$ times original RBF}
-%%\begin{eqnarray}
-%%Lu(x_i) &=& \sum_{j(i)=1}^{NP} c_j \varphi(\vectornorm{x_i - x_j}) \\
-%%c_j &=& 
-%%\end{eqnarray}
-
-%%
-%%\hl{notes on collocation}
-%%This is the collocation formula: 
-%%\begin{equation}
-%%f(x) = \sum_{j=1}^{N} a_j \varphi(r) + \sum_{j=N+1}^{N + (M-1)} b_j P(x)
-%%\end{equation}
-%%were the first sum is for standard interpolation, and the second sum both enforces that our residual be: 
-%%\begin{equation}
-%%\sum_{j=1}^{N} b_j P(x) = 0
-%%\end{equation}
-%%and also enforces that our polynomial interpolant be order $M-1$. \hl{Is this the "order"?}
-
-%
-%For more details on unsymmetric and symmetric collocation, including collocation with compactly supported RBFs, refer to \cite{Fasshauer:2007}.
-
-%If the PDE is time dependent, we let the coefficients $c_j$ be time dependent (i.e., $c_j(t)$) and solve for them at discrete time steps \cite{Mouat:2002}
-
-%To solve the linear systems we use Cholesky, but a conjugate gradient is better for systems that are too large for Cholesky. In our case we have many small matrices so its ok for the former. 
-
-%Multiple levels for decomposition: 1) domain decomposition to reduce conditioning number in global RBF; 2) parallel decomposition to reduce compute time. \cite{Divo:2007} uses 2). 
-
-
+%TODO: time stepping integrated into global collocation? For now, cut (see toadd timestepping.tex)
 
 
 
 
 \part{The RBF-FD Method}
 
+\chapter{RBF-FD}
 
+% TODO: how does the RBF-FD method expand on existing?
+While most of the literature surrounding RBFs for PDEs involves collocation, an alternative method does exist: RBF-FD. RBF-FD is a hybrid of RBF scattered data interpolation and Finite Difference stencils. The idea behind finite-difference stencils is to express various derivative operators as a linear combination of the unknown functional values in the neighborhood of the point where an approximation to the derivative operator is desired. Common approximations such as upwind differencing, center differencing, higher order approximations, and even spectral operators, are of this form. A common approach to building such discrete operators is to form a local interpolant in a neighborhood of the target point, and simply differentiate it analytically. This is the approach taken in RBF-FD,   which  allows for stencils with irregular placement and number of nodes, and assigns their weights based on an RBF \cite{Wright2003}. 
+A detailed derivation is provided in the next chapter. %For a detailed derivation of the method see \cite{Wright2004, Wright2003, WrightFornberg06, Chandhini2007}. 
+Such an approach leads to very simple implementations of time-advancement schemes, whether explicit or implicit. The solution at the new time step is simply some linear---if $\diffop{}$ is linear, nonlinear otherwise---combination of the unknown functional values (if implicit scheme) or known functional value (if explicit scheme). 
 
+Key challenges lie in the choice of grid, the choice of stencil, whether or not to change the support as a function of the stencil, how to guaranty the stability of the differentiation  operator after discretizaiton, etc. 
 
-\subsection{Recent Advances in Conditioning}
-
-Recently, Fornberg and Wright 
-\cite{Fornberg2004} presented the \emph{Contour--Pad\'{e} algorithm}, which allows for numerically stable 
-computation of highly 
-accurate interpolants for (very small) cases typically associated with ill-conditioning induced by nearly flat RBFs (i.e., $\epsilon \rightarrow 0$). Larsson and Fornberg \cite{Larsson2003} 
-applied the 
-algorithm to all three methods of collocation (Kansa's, Fasshauer's and Direct Collocation) with considerable gain in accuracy over solutions from classical second-order FD and a pseudospectral method. Note that currently, the Contour-Pad\'{e} 
-algorithm was only studied for global RBF interpolation, not for compact or local methods. 
-
-The \emph{RBF-QR} method, an alternative for numerically stable computation in the limit as $\epsilon \rightarrow 0$, was introduced by Fornberg  and 
-Piret \cite{Fornberg2007} in context of a sphere, and later extended to planar 2D problems in \cite{Fornberg2009b}. The 
-RBF-QR 
-method is simple 
-to implement (less than 100 lines of Matlab code), and it allows solution of large problems that are typically ill-conditioned. Fornberg, Larsson and Flyer \cite{Fornberg2009b} successfully applied RBF-QR on large problems with 6000 nodes for globally supported basis functions. \authnote{add mention of bengt's latest: } \cite{Fornberg2011a, Fornberg2011b}
-
-With these two algorithms, global RBF methods have overcome most ill-conditioning issues for small to mid-sized problems. Unfortunately, both Contour-Pad\'{e} and RBF-QR fail for large enough problems due to ill-conditioning. As the number of RBFs increases beyond a few thousand nodes it is impossible to avoid  ill-conditioning of the extremely large interpolation matrix.
-
-This reveals the benefit of local methods, which decrease the number of RBFs and ill-conditioning. However, in the limit as local stencil size increases to include all nodes in a domain, the local and global method are equivalent; thus it is known that local methods also suffer extreme ill-conditioning around 2000 nodes per stencil \cite{Shu2006}. To our our knowledge, no research has yet been published that applies the RBF-QR method to RBF-FD stencils.
-
-
-\subsection{Parallel RBF Implementations}
-%\togordon{Review this subsection: }
-
-Parallel implementations of RBF methods currently rely on parallel domain decomposition. Depending on the implementation, domain decomposition not only accelerates solution procedures, but can decrease the ill-conditioning that plague all global RBF methods \cite{Divo2007}. The ill-conditioning is reduced if each domain is treated as a separate RBF domain, and the boundary update is treated separately. Domain decomposition methods for RBFs were introduced by Beatson et al. \cite{Beatson2000} in the year 2000 as a way to increase problem sizes into the millions of nodes.
-
-Divo and Kassab \cite{Divo2007} used a domain decomposition method with artificial 
-subdomain boundaries for their implementation of a local collocation method \cite{Divo2007}. 
-Subdomains are processed independently. The derivative values 
-at artificial boundary points are averaged to maintain global consistency of physical values. Their implementation 
-was designed for a 36 node cluster, but benchmarks and scalability tests are not provided.
-
-% Divo: it seems almost unnecessary to use domain decomposition if they have the local method.
-% I suppose the domain decomposition is necessary for averaging physical values more than RBF collocation.
-
-Kosec and \v{S}arler \cite{Kosec2008} used OpenMP to parallelize coupled heat transfer 
-and fluid flow problems on a single workstation. 
-Their test cases used local collocation, explicit time-stepping and Neumann boundary conditions. A speedup 
-factor of 1.85x over serial execution was achieved by executing on two CPU cores; no 
-results from scaling tests were provided. 
-
-Stevens et al. \cite{Stevens2009a} mention a parallel implementation under development, but no document is available yet. 
-
-Additional RBF implementations are discussed at the end of this chapter in the context of parallel co-processing with the GPU. 
-
-In this work, we will add to the above experiences, with the added twist of incorporating an implementation on the GPU (see later chapters). 
 
 
 % TODO make a chapter dedicated to RBF-FD (how it reuses content from RBF methods and what is different)
 \chapter{The RBF-FD Method}
+
 This is followed by a description of Radial Basis Function-generated Finite Differences and examples of operators approximated by the method within this work.
 
 The choice to study RBF-FD within this dissertation is motivated by two factors. First, RBF-FD represents one of the latest developments within the RBF community. The method was formally introduced in 2003 but has yet to obtain the critical-mass following necessary for the method's use in large-scale scientific models. Our goal throughout the dissertation has been to scale RBF-FD to complex problems on high resolution meshes, and to lead the way for its adoption in high performance computational geophysics. Second, RBF-FD inherits many of the positive features from global and local collocation schemes, but sacrifices others for the sake of significantly reduced computational complexity and increased parallelism. We capitalize on the inherent parallelism to develop a collection of multi-GPU test cases that span the compute nodes of a Top 500 supercomputer. Our effort leads the way for application of RBF-FD in the modern field of high performance computing where GPU accelerators will be key to breaching the exa-scale barrier in computing \cite{GPUandExascale2011}.
@@ -807,11 +599,46 @@ Rather than solely focus on the optimizations of said algorithms on the GPU, we 
 
 \section{Related Works}
 
-The following are related works on RBF-FD. Each needs to be incorporated in this text: 
+\subsection{RBF-FD}
 
-\begin{itemize} 
-\item 
-\end{itemize}
+RBF-generated Finite Differences (RBF-FD) were first introduced by Tolstykh in 2000 \cite{Tolstykh2000}, 
+but it was the simultaneous, yet independent,
+efforts in \cite{Shu2003}, \cite{Tolstykh2003a}, \cite{Wright2003} and \cite{Cecil2004} that gave the method its real start. 
+The RBF-FD method (and the RBF-HFD, ``Hermite" equivalent \cite{WrightFornberg06}) is similar in concept to classical 
+finite-differences (FD), but differs in that the underlying differentiation 
+weights are exact for RBFs rather than polynomials. The method contrasts with global RBF methods in the sense that it does not interpolate the differential operator of the PDE. Instead, the RBF-FD method applies the differential operator to translates of the RBF in a small stencil/neighborhood of nodes. Solving the interpolation system in RBF-FD results in the set of generalized FD weights that approximate the differential quantity at the stencil center.
+
+RBF-FD 
+share many advantages with global RBF methods, 
+like the ability to function without an underlying mesh, easily extend to higher dimensions and afford large time steps; however spectral accuracy is lost. 
+Other advantages of RBF-FD 
+include lower computational complexity together with high-order accuracy
+(6th to 10th order accuracy is common). 
+As in FD, increasing the stencil size, $n$, increases the accuracy of the approximation.
+% TODO: rbffd has the opportunity for parallelization.
+
+In some ways, RBF-FD and global RBF methods are plagued by the same difficulties. For example, as the number of nodes in the stencil increases, so too does the ill-conditioning of the linear systems to be solved. Similarly, the most accurate weights occur when $\epsilon \rightarrow 0$, but values in that regime beget additional ill-conditioning problems---a recurrence of the \emph{Uncertainty Relation} \cite{Schaback1995}. One key difference in the multiple independent RBF-FD origins was that Wright \cite{Wright2003} was able to bypass ill-conditioning of RBF-FD and investigate its behavior in the limit as $\epsilon \rightarrow 0$ by means of the Contour-Pad\'{e} algorithm. 
+
+Given $N$ total nodes in the domain, $N$ linear systems, each of size $n \times n$, are solved to calculate the differentiation weights. Since $n \ll N$, the RBF-FD preprocessing complexity is dominated by $O(N)$; significantly lower than the global RBF method ($O(N^3)$). The cost per time step is also $O(N)$. Although the complexity of RBF-PS has closed the gap between the two methods, RBF-FD squeaks by 
+
+RBF-FD have been successfully employed for a variety of problems including Hamilton-Jacobi equations \cite{Cecil2004}, convection-diffusion problems \cite{Chandhini2007, Stevens2009b},
+incompressible Navier-Stokes equations \cite{Shu2003,Chinchapatnam2009}, transport on the sphere \cite{FornbergLehto11}, and the shallow water equations \cite{FlyerLehto11}.
+%Another local alternative for solving PDEs with RBFs was presented by Wright and Fornberg \cite{Wright2004, WrightFornberg06}. 
+%However, in the limit as RBF-FD stencils include all nodes in the domain, Kansa's method is reproduced \cite{Shu2006}. 
+%\togordon{Statement about RBF-FD and Kansa's method is given without proof.}
+%According to Wright and Fornberg \cite{Wright2004}, RBF-FD (and \emph{RBF-HFD} for the Hermite version) was i%ndependently 
+%proposed by many authors including Wright \cite{Wright2003} in his dissertation, Tolstykh \cite{Tolstykh2000,Tolstykh2003a, Tolstykh2003b}, Shu et al. \cite{Shu2003}, and Cecil et al. \cite{Cecil2004}. 
+Shu et al. \cite{Shu2006} compared the RBF-FD method to Least Squares FD (LSFD) in context of 2D incompressible viscous 
+cavity flow, and found that under similar conditions, the RBF-FD method was more accurate than LSFD, but the solution required 
+more iterations of an iterative solver. RBF-FD was applied to Poisson's 
+equation in \cite{Wright2004}.  Chandhini and Sanyasiraju \cite{Chandhini2007} studied it in context of 1D and 2D, 
+linear and non-linear, 
+convection-diffusion equations, demonstrating solutions that are non-oscillatory for high Reynolds number, with improved 
+accuracy over classical FD. An application to Hamilton-Jacobi problems \cite{Cecil2004}, and 2D linear and non-linear PDEs 
+including Navier-Stokes equations \cite{Shu2003} have all been considered. 
+
+
+
 
 
 
@@ -1094,6 +921,32 @@ In general, the larger the stencil size, the higher the order of the Laplacian. 
 
 % TODO: Break off to new chapter
 \chapter{TEMP}
+
+
+\subsection{Parallel RBF Implementations}
+\authnote{Related work for start of Parallel/GPU chapter}
+Parallel implementations of RBF methods currently rely on parallel domain decomposition. Depending on the implementation, domain decomposition not only accelerates solution procedures, but can decrease the ill-conditioning that plague all global RBF methods \cite{Divo2007}. The ill-conditioning is reduced if each domain is treated as a separate RBF domain, and the boundary update is treated separately. Domain decomposition methods for RBFs were introduced by Beatson et al. \cite{Beatson2000} in the year 2000 as a way to increase problem sizes into the millions of nodes.
+
+Divo and Kassab \cite{Divo2007} used a domain decomposition method with artificial 
+subdomain boundaries for their implementation of a local collocation method \cite{Divo2007}. 
+Subdomains are processed independently. The derivative values 
+at artificial boundary points are averaged to maintain global consistency of physical values. Their implementation 
+was designed for a 36 node cluster, but benchmarks and scalability tests are not provided.
+
+% Divo: it seems almost unnecessary to use domain decomposition if they have the local method.
+% I suppose the domain decomposition is necessary for averaging physical values more than RBF collocation.
+
+Kosec and \v{S}arler \cite{Kosec2008} used OpenMP to parallelize coupled heat transfer 
+and fluid flow problems on a single workstation. 
+Their test cases used local collocation, explicit time-stepping and Neumann boundary conditions. A speedup 
+factor of 1.85x over serial execution was achieved by executing on two CPU cores; no 
+results from scaling tests were provided. 
+
+Stevens et al. \cite{Stevens2009a} mention a parallel implementation under development, but no document is available yet. 
+
+Additional RBF implementations are discussed at the end of this chapter in the context of parallel co-processing with the GPU. 
+
+In this work, we will add to the above experiences, with the added twist of incorporating an implementation on the GPU (see later chapters). 
 
 
 \section{Fragments (integrate above)}
